Add functionality to support application based virtual host configurations

--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,7 @@
 	},
 	"autoload" : {
 		"psr-0" : {
-			"AppserverIo\\SingleApp" : [
-				"src/"
-			]
+			"AppserverIo\\SingleApp" : "src/"
 		}
 	},
 	"support" : {
